# g915x-rgb

./: LICENSE  README.md  install.sh  pyproject.toml
data/: 99-g915x.rules  g915x-rgb.service
src/g915x_rgb/: __init__.py  animation.py  app.py  apply.py  backend.py  config.py  keyboard_layout.py  keyboard_widget.py  profile.py  watcher.py  window.py
src/g915x_rgb/widgets/: group_panel.py  profile_list.py
